(lang dune 3.16)
(using menhir 3.0)
(name vie_backend)

(generate_opam_files true)

(source
 (github devinsilence/vie)) 

(authors "DevInSilence")

(maintainers "DevInSilence")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name vie_backend)
 (synopsis "Vie backend libraries for the Vie programming language")
 (description "Vie backend libraries for the Vie programming language")
 (depends ocaml dune camomile ppx_deriving)
 (tags
  (topics "programming" "languages" "backend")))
